# memory-journal-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .memory-journal-team.db  .npmrc  .prettierignore  .prettierrc  .scout-ignore  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CVE-2025-8869-FIX.md  DOCKER.md  DOCKER_PUBLISH.md  DOCKER_README.md  Dockerfile  Dockerfile.alpine  Dockerfile.lite  Dockerfile.smithery  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  ServerInstructions.BAK.ts  UNRELEASED.md  adamic.code-workspace  build-and-push.sh  check.txt  check_context.py  check_db.py  create-github-release.md  create_test_entry.py  debug_fts.py  deploy.md  deps.txt  docker-compose.yml  docker-run.sh  errors.txt  (+37 more)
.github/: DOCKER_DEPLOYMENT_SETUP.md  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.vectra_index/: index.json
docs/: ARCHITECTURE.md  COPILOT_SETUP.md  MEMORY_JOURNAL_MCP_BRIEF.md  README.md  agentic-journal-synergy.md  code-map.md  copilot-setup.md  deployment.md  team-crud-expansion.md  tool-reference.md
hooks/: README.md
releases/: release-notes-v2.2.0.md  release-notes.md  v2.1.0.md  v3.0.0.md  v3.1.0.md  v3.1.1.md  v3.1.2.md  v3.1.3.md  v3.1.4.md  v3.1.5.md  v4.0.0.md  v4.1.0.md  v4.2.0.md  v4.3.0.md  v4.3.1.md  v4.4.0.md  v4.4.1.md  v4.4.2.md  v4.5.0.md  v5.0.0.md  v5.0.1.md  v5.1.0.md  v5.1.1.md  v6.0.0.md  v6.0.1.md  v6.1.0.md  v6.1.1.md  v6.1.2.md  v6.2.0.md  v6.2.1.md  v6.3.0.md  v7.0.0.md  v7.0.1.md  v7.1.0.md  v7.2.0.md  v7.3.0.md  v7.4.0.md  v7.5.0.md  v7.6.0.md  (+2 more)
(+589 files in other folders)
