[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-journal-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for personal journaling with context awareness"
authors = [
    {name = "Chris & Mike", email = "writenotenow@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
memory-journal-mcp = "memory_journal_mcp.server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true